Set player in players list on JWT auth, and endpoint added to GET players list (probably just gonna be used for debugging)
