# src/api/docs/swagger.json
@@ -38,12 +38,33 @@
         },
         "/game/settle": {
             "post": {
-                "description": "Settle game window"
+                "description": "Settle game window",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Bearer token",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    }
+                ]
             }
         },
         "/game/vote": {
             "post": {
-                "description": "Receive and tabulate votes, stage vote outcome to be processed when game window is settled"
+                "description": "Receive and tabulate votes, stage vote outcome to be processed when game window is settled",
+                "produces": [
+                    "application/json"
+                ],
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Bearer token",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    }
+                ]
             }
         },
         "/ping": {
@@ -57,6 +78,22 @@
                         "description": "pong",
                         "schema": {
                             "type": "string"
+                        }
+                    }
+                }
+            }
+        },
+        "/players": {
+            "get": {
+                "description": "Players",
+                "produces": [
+                    "application/json"
+                ],
+                "responses": {
+                    "200": {
+                        "description": "List of players in the current gameplay session",
+                        "schema": {
+                            "$ref": "#/definitions/handlers.PlayerList"
                         }
                     }
                 }
@@ -94,6 +131,9 @@
         "handlers.AuthInput": {
             "type": "object",
             "properties": {
+                "address": {
+                    "type": "string"
+                },
                 "msg": {
                     "type": "string"
                 },
@@ -109,6 +149,14 @@
             "type": "object",
             "properties": {
                 "token": {
+                    "type": "string"
+                }
+            }
+        },
+        "handlers.PlayerList": {
+            "type": "object",
+            "properties": {
+                "players": {
                     "type": "string"
                 }
             }
